Adding serialization/deserialization tags to EntityId.
Signed-off-by: mgoelswirlds <mugdha.goel@swirldslabs.com>